--- a/app/views/items/new.html.erb
+++ b/app/views/items/new.html.erb
@@ -1,4 +1,4 @@
-div class="search">
+<div class="search">
   <div class="row">
     <div class="text-center">
       <%= form_tag(new_item_path, method: :get, class: 'form-inline') do %>
